Fri Feb 10 14:35:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/tests/EC_Mcast/run_test.pl:
        * orbsvcs/tests/EC_MT_Mcast/run_test.pl:
          When we can't spawn the processes, just exit directly instead
          of waiting on a timeout. Speedsup the daily builds when we
          can't build the executables

Fri Feb 10 11:21:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/orbsvcs/Event/ECG_CDR_Message_Sender.cpp:
          Use prefix increment

        * orbsvcs/orbsvcs/Event/ECG_UDP_Protocol.h:
          Removed this file

        * orbsvcs/tests/EC_MT_Mcast/EC_MT_Mcast.mpc:
        * orbsvcs/tests/EC_MT_Mcast/MCast.cpp:
        * orbsvcs/tests/EC_MT_Mcast/svc.conf:
          Link in the strategies lib, this way this test can be used
          also in a static environment

        * orbsvcs/orbsvcs/SSLIOP/SSLIOP_Connector.cpp:
          Initialise pointer with 0

Fri Feb 10 11:10:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_2319_Regression/*:
          Added regression for this bug. Thanks to  Toha Bakanovsky
          <im-scooter at yandex dot ru> for creating this. This bug
          is not fixed

        * tao/Blocked_Connect_Strategy.h:
          Doxygen improvements

        * tao/FlResource_Loader.cpp:
          Removed not needed include

        * tao/FlResource_Factory.h:
          Reordered includes

        * tao/PI_Server/ServerInterceptorAdapter.cpp:
          We did copy PICurrent too often from TSC to RSC and back

        * tao/PortableServer/Servant_Upcall.h:
          Made single argument constructor explicit

        * tao/RTPortableServer/RT_POA.cpp:
          Initialize pointer with 0

Fri Feb 10 08:28:55 UTC 2006  Don Sharp <Donald.Sharp@prismtech.com>

        * TAO/utils/catior/catior.cpp
	* TAO/utils/catior/catior.mpc

	  Incorporate <ossama@dre.vanderbilt.edu> proposed changes for
	  Bugzilla 2400 plus
	  Better error reporting