@@ -1,3 +1,12 @@
+Fri Feb 10 15:00:00 UTC 2006  Simon Massey  <sma@prismtech.com>
+
+        * tao/ServerRequestInterceptor_Adapter.h
+        * tao/PI_Server/ServerInterceptorAdapter.cpp:
+        * tao/PortableServer/Object_Adapter.cpp:
+          Correct compile problems for TAO_HAS_EXTENDED_FT_INTERCEPTORS
+          builds. This build configuration has been left behind with
+          recent changes.
+
 Fri Feb 10 14:35:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * orbsvcs/tests/EC_Mcast/run_test.pl:
